--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,6 +38,8 @@ header .contenedor_menu .menu a {
     color: #b5121b;
     margin-left: 20px;
     font-size: 18px;
+    cursor: pointer;
+    text-decoration: underline;
 }
 
 /* Estilos del main y principal */
@@ -69,6 +71,17 @@ header .contenedor_menu .menu a {
     background: #b5121b;
     border-radius: 0 0 2px 2px;
     margin-bottom: 20px;
+}
+
+.main .cartelera .calle,
+.main .cartelera .correo,
+.main .cartelera .telefono {
+    font-size: 25px;
+    margin-bottom: 5px;
+}
+
+.main .cartelera h2 {
+    margin-top: 50px;
 }
 
 /* Estilos del pie de pagina */
